# pgReviewer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOGFOOD.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml  pgreviewer-dogfood.yml  pgreviewer-on-demand.yml  pgreviewer-pr-welcome.yml  publish-image.yml  review.yml
db/: Dockerfile  seed.py
db/init/: 00_extensions.sql
db/migrations/: 0001_initial_schema.sql
demos/01-pure-sql/: .pgreviewer.yml  README.md
demos/02-alembic/: .pgreviewer.yml  README.md
demos/03-sqlalchemy-models/: .pgreviewer.yml  README.md  models.py
demos/04-complex-queries/: .pgreviewer.yml  README.md
demos/05-n-plus-one/: .pgreviewer.yml  README.md  repository.py  views.py
demos/06-multi-tenant/: .pgreviewer.yml  README.md
docs/: README.md  analysis.md  ci-database-setup.md  configuration.md  debug-store.md  debug_store.md  detectors.md  example-workflow.yml  getting-started.md  github-actions.md  mcp-integration.md
docs/examples/: pgreviewer-action.yml
pgreviewer/: cli.py  config.py  exceptions.py
pgreviewer/analysis/: call_graph.py  complexity_router.py  cross_correlator.py  explain_runner.py  hypopg_validator.py  impact_estimator.py  index_generator.py  index_suggester.py  model_issue_detectors.py  plan_parser.py  query_catalog.py  schema_collector.py  schema_dumper.py  schema_mutator.py  schema_parser.py  static_model_checker.py  workload_correlator.py
pgreviewer/ci/: extension_detector.py  github_integration.py  pg_version_detector.py
pgreviewer/cli/: main.py
pgreviewer/core/: backend.py  degradation.py  finding.py  models.py  schema_provider.py  severity.py
pgreviewer/db/: pool.py
pgreviewer/infra/: cost_guardrail.py  debug_store.py
pgreviewer/llm/: __init__.py  client.py  pricing.py  provider.py  structured_output.py
pgreviewer/mcp/: __init__.py  client.py  wrappers.py
pgreviewer/parsing/: diff_parser.py  extraction_router.py  file_classifier.py  model_differ.py  orm_compiler.py  param_substitutor.py  sql_extractor_migration.py  sql_extractor_raw.py  sqlalchemy_analyzer.py  sqlalchemy_query_extractor.py  suppression_parser.py
pgreviewer/reporting/: __init__.py  cli_report.py  comment_manager.py  diff_comment.py  pr_comment.py  sections.py  workload.py
tests/: test_action_metadata.py  test_alter_column_type.py  test_backend.py  test_backend_status_command.py  test_cartesian_join.py  test_catalog_command.py  test_check_command.py  test_code_pattern_detectors.py  test_config_command.py  test_config_trigger_paths.py  test_cost_command.py  test_cost_guardrail.py  test_cross_correlator.py  test_degradation.py  test_demo_02_alembic.py  test_demo_03_sqlalchemy_models.py  test_demo_04_complex_queries.py  test_demo_05_n_plus_one.py  test_demo_06_multi_tenant.py  test_diff_command.py  test_diff_parser.py  test_docker_image_contract.py  test_drop_index_workload_detector.py  test_explain_interpreter.py  test_extension_detector.py  test_file_classifier.py  test_fk_without_index.py  test_high_cost_detector.py  test_hypopg_validator.py  test_index_generator.py  test_index_not_concurrently.py  test_index_recommendation.py  test_index_suggester.py  test_large_table_ddl.py  test_llm_client.py  test_mcp_client.py  test_mcp_wrappers.py  test_migration_detectors.py  test_missing_index_on_filter.py  test_missing_timestamp_index.py  (+27 more)
tests/integration/: conftest.py  test_hypopg.py  test_llm_explain.py  test_mcp_client.py
tests/unit/: conftest.py  test_call_graph.py  test_comment_manager.py  test_complexity_router.py  test_cross_correlator.py  test_degraded_static_detectors.py  test_diff_comment.py  test_diff_ddl_handling.py  test_extraction_router.py  test_extraction_routing.py  test_finding.py  test_github_integration.py  test_impact_estimator.py  test_llm_explain.py  test_llm_n_plus_one_detector.py  test_llm_report_summarizer.py  test_migration_detectors.py  (+13 more)
(+150 files in other folders)
